# libdt

./: .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  README.org  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
libdt/: array.c  array.h  common.h  libdt.h  test.c
src/: Makefile.am  Makefile.in  array.c  array.h  demo.c  obvec.c  obvec.h  test.c
test/: test.h  test_array.c
